fixed welcome page on mobile sizes

--- a/src/styles/SASS/Welcome.scss
+++ b/src/styles/SASS/Welcome.scss
@@ -15,9 +15,10 @@
 
   h1 {
     color: map-get(vars.$colors, "dOrange");
-    margin-bottom: -22px;
     font-weight: 500;
     font-size: 6rem;
+    text-align: center;
+    line-height: 1;
   }
 
   h2 {
@@ -54,9 +55,7 @@
       background-color: map-get(vars.$colors, "lOrange");
       box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
       transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-      &::placeholder {
-        color: map-get(vars.$colors, "green");
-      }
+
       &:focus {
         background-color: map-get(vars.$colors, "dOrange");
         color: map-get(vars.$colors, "green");
